[package]
name = "ray"
version = "0.10.0"
edition = "2024"
license = "Apache-2.0"
description = "Asynchronous VLESS server protocol implemented in Rust"
homepage = "https://github.com/radioactiveAHM/ray"
repository = "https://github.com/radioactiveAHM/ray"
authors = ["djahmadfire@gmail.com"]
keywords = ["vless"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
    "web-programming::websocket"
]

[dependencies]
uuid = "1.23.1"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "rt", "net", "io-util", "time", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "tls12", "brotli", "zlib"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hickory-resolver = { version = "0.26.0", default-features = false, features = ["tokio", "https-aws-lc-rs", "h3-aws-lc-rs", "quic-aws-lc-rs", "tls-aws-lc-rs", "webpki-roots"] }
tokio-websockets = { version = "0.13.2", features = ["server", "sha1_smol"] }
futures-util = "0.3.32"
bytes = "1.11.1"
libc = "0.2.185"
log = "0.4.29"
env_logger = "0.11.10"
h2 = "0.4.13"
http = "1.4.0"
socket2 = "0.6.3"
rand = "0.10.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
